feat: replace path with parentId and name