@@ -26,18 +26,19 @@ public class FileMetadataRepository {
   private final PostgresConnection postgres;
 
   public void addFile(StorageEntity fileEntity) throws StorageFileAlreadyExistsException {
-    if (fileExists(fileEntity.getUserId(), fileEntity.getPath(), false)) {
-      throw new StorageFileAlreadyExistsException(fileEntity.getPath());
+    if (fileExists(fileEntity.getUserId(), fileEntity.getParentId(), fileEntity.getName(), false)) {
+      throw new StorageFileAlreadyExistsException(fileEntity.getParentId(), fileEntity.getName());
     }
 
     postgres.executeUpdate(
-        "INSERT INTO files (id, user_id, path, size, mime_type, visibility, is_deleted, tags, is_directory, "
+        "INSERT INTO files (id, user_id, parent_id, name, size, mime_type, visibility, is_deleted, tags, is_directory, "
             + "status, operation_type, started_at, updated_at, retry_count, error_message) "
-            + "VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);",
+            + "VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);",
         Arrays.asList(
             fileEntity.getId(),
             fileEntity.getUserId(),
-            fileEntity.getPath(),
+            fileEntity.getParentId(),
+            fileEntity.getName(),
             fileEntity.getSize(),
             fileEntity.getMimeType(),
             fileEntity.getVisibility(),
@@ -60,22 +61,41 @@ public class FileMetadataRepository {
   }
 
   public List<StorageEntity> getFilesList(FileListFilter filter) {
-    String query =
-        "SELECT * FROM files WHERE user_id = ? AND path LIKE ? AND path != ? AND is_deleted = FALSE AND status = 'READY'";
     List<Object> params = new ArrayList<>();
 
-    params.add(filter.userId());
-    params.add(filter.searchDirectory() + "%");
-    params.add(filter.searchDirectory());
+    String query;
+    if (filter.recursive()) {
+      query =
+          """
+            WITH RECURSIVE folder_tree AS (
+                SELECT * FROM files
+                WHERE user_id = ? AND parent_id IS NOT DISTINCT FROM ? AND is_deleted = FALSE
 
-    if (!filter.recursive()) {
-      query += " AND PATH NOT LIKE ?";
-      params.add(filter.searchDirectory() + "%/_%");
+                UNION ALL
+
+                SELECT f.* FROM files f
+                INNER JOIN folder_tree ft ON f.parent_id = ft.id
+                WHERE f.is_deleted = FALSE
+            )
+            SELECT * FROM folder_tree WHERE 1=1
+        """;
+    } else {
+      query =
+          "SELECT * FROM files WHERE user_id = ? AND parent_id IS NOT DISTINCT FROM ? AND is_deleted = FALSE";
     }
+
+    params.add(filter.userId());
+    params.add(filter.parentId());
 
     if (!filter.includeDirectories()) {
       query += " AND is_directory = FALSE";
     }
+
+    if (!filter.recursive()) {
+      query += " AND status = 'READY'";
+    }
+
+    query += " ORDER BY CASE WHEN is_directory THEN 1 ELSE 2 END, name ASC";
 
     return postgres.executeQuery(query, params, this::createStorageEntityByResultSet);
   }
@@ -84,14 +104,17 @@ public class FileMetadataRepository {
     return getFile("SELECT * FROM files WHERE id = ? AND status = 'READY';", fileId);
   }
 
-  public Optional<StorageEntity> getFile(UUID userId, String path) {
+  public Optional<StorageEntity> getFile(UUID userId, UUID parentId, String name) {
     return getFile(
-        "SELECT * FROM files WHERE user_id = ? AND path = ? AND status = 'READY';", userId, path);
+        "SELECT * FROM files WHERE user_id = ? AND parent_id IS NOT DISTINCT FROM ? AND name = ? AND status = 'READY';",
+        userId,
+        parentId,
+        name);
   }
 
   private Optional<StorageEntity> getFile(String sql, Object... params) {
     List<StorageEntity> result =
-        postgres.executeQuery(sql, List.of(params), this::createStorageEntityByResultSet);
+        postgres.executeQuery(sql, Arrays.asList(params), this::createStorageEntityByResultSet);
 
     if (result.isEmpty()) {
       return Optional.empty();
@@ -100,22 +123,34 @@ public class FileMetadataRepository {
     return Optional.of(result.getFirst());
   }
 
-  public void deleteFile(UUID userId, String path) throws StorageFileNotFoundException {
-    if (!fileExists(userId, path, false)) {
-      throw new StorageFileNotFoundException(path);
+  public Optional<StorageEntity> getFileById(UUID fileId) {
+    String query = "SELECT * FROM files WHERE id = ?;";
+
+    List<StorageEntity> result =
+        postgres.executeQuery(query, List.of(fileId), this::createStorageEntityByResultSet);
+
+    return result.isEmpty() ? Optional.empty() : Optional.of(result.getFirst());
+  }
+
+  public void deleteFile(UUID userId, UUID parentId, String name)
+      throws StorageFileNotFoundException {
+    if (!fileExists(userId, parentId, name, false)) {
+      throw new StorageFileNotFoundException(parentId, name);
     }
 
     postgres.executeUpdate(
-        "DELETE FROM files WHERE user_id = ? AND path = ?;", List.of(userId, path));
+        "DELETE FROM files WHERE user_id = ? AND parent_id IS NOT DISTINCT FROM ? AND name = ?;",
+        Arrays.asList(userId, parentId, name));
   }
 
   public void updateEntity(StorageEntity fileEntity) {
     postgres.executeUpdate(
-        "UPDATE files SET path = ?, visibility = ?, tags = ?, size = ?, status = ?, "
+        "UPDATE files SET parent_id = ?, name = ?, visibility = ?, tags = ?, size = ?, status = ?, "
             + "operation_type = ?, retry_count = ?, started_at = ?, updated_at = ?, error_message = ? "
             + "WHERE user_id = ? AND id = ?",
         Arrays.asList(
-            fileEntity.getPath(),
+            fileEntity.getParentId(),
+            fileEntity.getName(),
             fileEntity.getVisibility(),
             FileTagsMapper.toString(fileEntity.getTags()),
             fileEntity.getSize(),
@@ -129,12 +164,13 @@ public class FileMetadataRepository {
             fileEntity.getId()));
   }
 
-  public boolean fileExists(UUID userId, String path) {
-    return fileExists(userId, path, true);
+  public boolean fileExists(UUID userId, UUID parentId, String name) {
+    return fileExists(userId, parentId, name, true);
   }
 
-  public boolean fileExists(UUID userId, String path, boolean isOnlyReady) {
-    String query = "SELECT EXISTS (SELECT 1 FROM files WHERE user_id = ? AND PATH = ?";
+  public boolean fileExists(UUID userId, UUID parentId, String name, boolean isOnlyReady) {
+    String query =
+        "SELECT EXISTS (SELECT 1 FROM files WHERE user_id = ? AND parent_id IS NOT DISTINCT FROM ? AND name = ?";
 
     if (isOnlyReady) {
       query += " AND status = 'READY'";
@@ -143,15 +179,50 @@ public class FileMetadataRepository {
     query += ");";
 
     List<Boolean> result =
-        postgres.executeQuery(query, List.of(userId, path), rs -> (rs.getBoolean(1)));
+        postgres.executeQuery(
+            query, Arrays.asList(userId, parentId, name), rs -> (rs.getBoolean(1)));
     return result.getFirst();
+  }
+
+  public boolean isDescendant(UUID sourceId, UUID targetParentId) {
+    String query =
+        """
+        WITH RECURSIVE descendants AS (
+            SELECT id FROM files WHERE id = ?
+            UNION ALL
+            SELECT f.id FROM files f
+            INNER JOIN descendants d ON f.parent_id = d.id
+        )
+        SELECT EXISTS (SELECT 1 FROM descendants WHERE id = ?);
+    """;
+
+    List<Boolean> result =
+        postgres.executeQuery(query, List.of(sourceId, targetParentId), rs -> rs.getBoolean(1));
+
+    return !result.isEmpty() && result.getFirst();
+  }
+
+  public long calculateTotalSizeOfTree(UUID directoryId) {
+    String sql =
+        """
+        WITH RECURSIVE folder_tree AS (
+            SELECT id, size FROM files WHERE id = ?
+            UNION ALL
+            SELECT f.id, f.size FROM files f
+            INNER JOIN folder_tree ft ON f.parent_id = ft.id
+        )
+        SELECT COALESCE(SUM(size), 0) FROM folder_tree;
+    """;
+    List<Long> result = postgres.executeQuery(sql, List.of(directoryId), rs -> rs.getLong(1));
+    return result.isEmpty() ? 0L : result.getFirst();
   }
 
   private StorageEntity createStorageEntityByResultSet(ResultSet rs) throws SQLException {
     return StorageEntity.builder()
         .id(getUUID(rs, "id"))
         .userId(getUUID(rs, "user_id"))
-        .path(rs.getString("path"))
+        .parentId(getUUID(rs, "parent_id"))
+        .name(rs.getString("name"))
         .size(rs.getLong("size"))
         .mimeType(rs.getString("mime_type"))
         .visibility(rs.getString("visibility"))
